--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
+    <script src="./main.js" defer></script>
 </head>
 <body>
-    <h1>Select an Option</h1>
+    <h1>Select a food</h1>
     <div id="options"></div>
-    <script src="main.js"></script>
+    <a href="./selection.html">Go to Selection Page</a>
 </body>
 </html>
