--- a/selection.html
+++ b/selection.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Selection Page</title>
+    <script src="main.js" defer></script>
 </head>
 <body>
-    <h1>Your Selection</h1>
-    <div id="selectedOption"></div>
-    <script src="main.js"></script>
+    <h1>Your Selections</h1>
+    <div id="selections"></div>
+    <a href="index.html">Go back to Home Page</a>
 </body>
 </html>
