--- a/selection.html
+++ b/selection.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="T-TECH">
+    <meta name="author" content="Cody P.">
     <title>Selection Page</title>
-    <script src="main.js" defer></script>
+    <script src="./main.js" defer></script>
 </head>
 <body>
-    <h1>Your Selections</h1>
+    <h1>Your Selected Foods</h1>
     <div id="selections"></div>
-    <a href="index.html">Go back to Home Page</a>
+    <a href="./index.html">Go back to Home Page</a>
 </body>
 </html>
